deploy/3.deploy-bigip-kubernetes-gateway-controller.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bigip-kubernetes-gateway
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bigip-kubernetes-gateway-pod
  template:
    metadata:
      name: bigip-kubernetes-gateway-pod
      labels:
        app: bigip-kubernetes-gateway-pod
    spec:
      serviceAccountName: k8s-bigip-ctlr
      nodeSelector:
        # node-role.kubernetes.io/control-plane: "true"
        # node-role.kubernetes.io/master: "true"
      containers:
        # kubectl logs -f deployment/bigip-kubernetes-gateway -c bigip-kubernetes-gateway-pod -n kube-system
        - name: bigip-kubernetes-gateway-pod
          image: f5devcentral/bigip-kubernetes-gateway:v0.1.0-20221226
          imagePullPolicy: IfNotPresent
          command: ["/bigip-kubernetes-gateway-controller-linux"]
          args: [
            "--controller-name=f5.io/gateway-controller-name",
            "--bigip-config-directory=/bigip-config",
            "--bigip-credential-directory=/bigip-credential",
          ]
          volumeMounts:
            - name: bigip-credential
              mountPath: "/bigip-credential"
              readOnly: true
            - name: bigip-config
              mountPath: /bigip-config
              readOnly: true
      volumes:
        - name: bigip-credential
          secret:
            secretName: bigip-login
        - name: bigip-config
          configMap:
            name: bigip-kubernetes-gateway-configmap

---

# expose the Prometheus port with NodePort
apiVersion: v1
kind: Service
metadata:
  name: bigip-kubernetes-gateway-svc
  namespace: kube-system
spec:
  selector:
    app: bigip-kubernetes-gateway-pod
  ports:
    - name: bigip-kubernetes-gateway-metrics
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
    - name: bigip-kubernetes-gateway-health
      protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30081
  type: NodePort
