deploy/4.deploy-bigip-kubernetes-gateway-webhook.yaml
# Install cert-manager.io: https://cert-manager.io/docs/installation/
---

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from: kube-system/my-selfsigned-ca
webhooks:
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      service:
        name: bigip-kubernetes-gateway-webhook
        namespace: kube-system
        path: /validate-gateway-networking-k8s-io-v1-gatewayclass
        port: 9443
    failurePolicy: Fail
    name: vgwc.kb.io
    rules:
      - apiGroups:
          - gateway.networking.k8s.io
        apiVersions:
        - v1beta1
        - v1
        operations: ["*"]
        resources:
          - gatewayclasses
    sideEffects: None
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      service:
        name: bigip-kubernetes-gateway-webhook
        namespace: kube-system
        path: /validate-gateway-networking-k8s-io-v1-gateway
        port: 9443
    failurePolicy: Fail
    name: vgw.kb.io
    rules:
      - apiGroups:
          - gateway.networking.k8s.io
        apiVersions:
        - v1beta1
        - v1
        operations: ["*"]
        resources:
          - gateways
    sideEffects: None
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      service:
        name: bigip-kubernetes-gateway-webhook
        namespace: kube-system
        path: /validate-gateway-networking-k8s-io-v1-httproute
        port: 9443
    failurePolicy: Fail
    name: vhr.kb.io
    rules:
      - apiGroups:
          - gateway.networking.k8s.io
        apiVersions:
        - v1beta1
        - v1
        operations: ["*"]
        resources:
          - httproutes
    sideEffects: None
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      service:
        name: bigip-kubernetes-gateway-webhook
        namespace: kube-system
        path: /validate-gateway-networking-k8s-io-v1beta1-referencegrant
        port: 9443
    failurePolicy: Fail
    name: vrg.kb.io
    rules:
      - apiGroups:
          - gateway.networking.k8s.io
        apiVersions:
        - v1beta1
        - v1
        operations: ["*"]
        resources:
          - referencegrants
    sideEffects: None


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bigip-kubernetes-gateway-webhook
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bigip-kubernetes-gateway-webhook-pod
  template:
    metadata:
      name: bigip-kubernetes-gateway-webhook-pod
      labels:
        app: bigip-kubernetes-gateway-webhook-pod
    spec:
      serviceAccountName: k8s-bigip-ctlr
      nodeSelector:
        # node-role.kubernetes.io/control-plane: "true"
        # node-role.kubernetes.io/master: "true"
      containers:
        # kubectl logs -f deployment/bigip-kubernetes-gateway-webhook -n kube-system
        - name: bigip-kubernetes-gateway-webhook-pod
          image: zongzw/bigip-kubernetes-gateway-webhook:latest-20231221-212920
          # image: zongzw/bigip-kubernetes-gateway-webhook:latest-20231127-193333
          # image: f5devcentral/bigip-kubernetes-gateway-webhook:v0.6.0-20231127
          imagePullPolicy: IfNotPresent
          command: ["/bigip-kubernetes-gateway-webhook-linux"]
          args: [
            # "--validates=gateway.gatewayClassName,gateway.listeners.tls.certificateRefs,httproute.parentRefs,httproute.rules.backendRefs",
            "--controller-name=f5.io/gateway-controller-name",
            "--certificate-directory=/tmp/k8s-webhook-server/serving-certs"
          ]
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: webhook-server-cert
---

# expose the webhook port with NodePort
apiVersion: v1
kind: Service
metadata:
  name: bigip-kubernetes-gateway-webhook
  namespace: kube-system
spec:
  selector:
    app: bigip-kubernetes-gateway-webhook-pod
  ports:
    - name: bigip-kubernetes-gateway-webhook-webhook
      protocol: TCP
      port: 9443
      targetPort: 9443
      nodePort: 30443
  type: NodePort
